crates/swc_css_parser/tests/errors/important/basic/output.stderr
error: Expected Ident
 --> $DIR/tests/errors/important/basic/input.css:2:19
  |
2 |     color: white !!important;
  |                   ^

